--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mi primera web</title>
+    <title>Holi te amo</title>
 </head>
 <body>
-    <h1>Mi primer heading</h1>
-    <h2>Mi segundo heading</h2>
+    <h1>TE AMOOOOOOOOOOOOO</h1>
+    <!--<h2>Mi segundo heading</h2>
     <h3>Mi tercer heading</h3>
     <h4>Mi cuarto headigng</h4>
     <h5>Mi quinto heading</h5>
@@ -14,11 +14,11 @@
     <p>Me gusta mucho la pasta</p>
     <h2>Pedrito clavo un clavito</h2>
     <hr>
+-->
     <p>Holi crayoli</p>
-    <P> Este texto es <span style="color:aqua"> mucho mas largo </span> y es por la etiqueta
-        jeje <br> holi crauora
-    </P>
+    <P> Holi <span style="color: red"> TE AMO </span>MUCHO MUCHO    </P>
     <!-- Lease con mucha atencion porque apenas estoy aprendiendo a hacer esto-->
-    <a href="https://www.twitch.tv"> IR A GOGLO</a>
+    <a href="https://www.youtube.com/watch?v=7YDkrJaiCrw"> Presioname jiji</a>
+    <img src="luna.jpeg" width="200"/>
 </body>
 </html>
